--- a/duitraya.html
+++ b/duitraya.html
@@ -39,7 +39,7 @@
 
 
    
-    <!--<section class="section">
+    <!--<section class="section"  testing push>
       <h2 class="sub-heading">The Details</h2>
       <div class="details">
         <i class="fas fa-calendar-check"></i>
