--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 
     <script type="text/javascript">
       document.getElementById("myButton").onclick = function () {
-          location.href = "https://www.youtube.com/";
+          location.href = "https://ariffkmy.github.io/SelamatHariRaya/duitraya.html";
       };
     </script>
     <script src="./js/smooth-scroll.polyfills.min.js"></script>
