--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
     </br>
     </br>
       <img class="resort-image" src="./img/duitraya.png" alt="Resort" />
-      <button onclick="location.href = 'https://wa.link/amhl5h';" id="myButton2" class="button2" ><i class="fa fa-whatsapp" style="font-size:20px"></i> Saya cuba nasib</button>
+      <button onclick="location.href = 'https://wa.link/5600yg';" id="myButton2" class="button2" ><i class="fa fa-whatsapp" style="font-size:20px"></i> Saya cuba nasib</button>
     </br>
     </br>
     </br>
